# py-stratum-sqlite

./: .coveragerc  .gitignore  LICENSE.md  README.md  build.xml  pyproject.toml
.github/workflows/: unit.yml
pystratum_sqlite/: SqliteDataLayer.py
pystratum_sqlite/backend/: SqliteBackend.py  SqliteRoutineLoaderWorker.py  SqliteRoutineWrapperGeneratorWorker.py  SqliteWorker.py
pystratum_sqlite/loader/: SqliteRoutineLoader.py
pystratum_sqlite/loader/helper/: SqliteDataTypeHelper.py
pystratum_sqlite/wrapper/: SqliteBulkWrapper.py  SqliteLastInsertRowIdWrapper.py  SqliteNoneWrapper.py  SqliteRow0Wrapper.py  SqliteRow1Wrapper.py  SqliteRowsWithIndexWrapper.py  SqliteRowsWithKeyWrapper.py  SqliteRowsWrapper.py  SqliteSingleton0Wrapper.py  SqliteSingleton1Wrapper.py  SqliteWrapper.py  SqliteYieldWrapper.py  __init__.py
test/: AAATest.py  BulkTest.py  LastInsertIdTest.py  MultipleStatementTest.py  NoneTest.py  Row0Test.py  Row1Test.py  Singleton0Test.py  Singleton1Test.py  StratumTestCase.py  TestBulkHandler.py  TestDataLayer.py  YieldTest.py  unit-test.sh
test/ddl/: 0100_create_tables.sql
test/etc/: stratum.cfg
test/psql/: tst_strtr.psql  tst_test01.psql  tst_test_bulk.psql  tst_test_execute_leading_queries.psql  tst_test_illegal_query.psql  tst_test_last_insert_id.psql  tst_test_no_doc_block.psql  tst_test_row0a.psql  tst_test_row1_conversion.psql  tst_test_row1a.psql  tst_test_rows1.psql  tst_test_rows_with_index1.psql  tst_test_singleton0a.psql  tst_test_singleton0b.psql  tst_test_singleton1a.psql  tst_test_singleton1b.psql  tst_test_yield.psql
(+3 files in other folders)
