[tool.poetry]
name = "PyStratum-SQLite"
version = "0.0.0"
description = "PyStratum SQLite: SQLite Backend"
authors = ["Set Based IT Consultancy <info@setbased.nl>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DatabaseStratum/py-stratum-sqlite"
documentation = "https://stratum.readthedocs.io/"
keywords = ["PyStratum", "SQLite"]
classifiers = ["Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Installation/Setup",
]

[tool.poetry.dependencies]
python = "^3.12.0"
PyStratum-Backend = "^2.1.0"
PyStratum-Common = "^3.1.0"
PyStratum-Middle = "^1.2.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.1"
PyStratum-Cli = "^2.0.2"
Sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-SQLite = "poetry.core.masonry.api"
